--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="col">
                 <div class="jumbotron">
-                    <p class="lead">dsf</p>
+                    <p class="lead"></p>
                   </div>
             </div>
         </div>
