--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Password Generator</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h2>Password Generator</h2>
+    <header class="head">
+    <div class="container-12">
+        <div class="row justify-content-center">
+            <div class="justify-content-center">
+                <h2 >Password Generator</h2>
             </div>
         </div>
-
-
+    </header>
+<div class="container" id="panel">
         <div class="row">
-            <div class="col">
+            <div class="col pb-2">
                 <h3>Generate Password</h3>
             </div>
         </div>
@@ -43,8 +45,9 @@
 
         </div>
     </div>
-
-    <script text="text/javascript" src="script.js"></script>
+</div>
+<footer class="foot"></footer>
+<script text="text/javascript" src="script.js"></script>
 </body>
 
 </html>
